--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <title>vBrain System Architecture - Pulse Garden</title>
+  <title>Planwerk</title>
 </head>
 <body>
   <div id="app"></div>
